Bug 1343429 - Dropdown menus are slightly off screen in some cases and should open justified to the right instead of left

--- a/extensions/BugModal/web/dropdown.css
+++ b/extensions/BugModal/web/dropdown.css
@@ -25,6 +25,7 @@
     -moz-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
     list-style: none;
+    right: 0px;
 }
 
 .dropdown-content.menu-up {
